--- a/week2_session1_cadd_exercise.ipynb
+++ b/week2_session1_cadd_exercise.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "## Aim\n",
     "\n",
-    "In this notebook, the experience gained in the first week will be applied to perform a virtual screening experiment for inhibitors of the epidermal growth factor receptor ([EGFR](https://en.wikipedia.org/wiki/Epidermal_growth_factor_receptor)) via machine learning. First, computer-friendly molecular representations will be introduced, which allow the training of machine learning models. Next, a support vector machine will be trained to classify molecules as active or inactive. The trained model will be used to predict the activity of a small molecule set. Finally, successsful participants can check their hits for potential activity against EGFR via online resources."
+    "In this notebook, the experience gained in the first week will be applied to perform a virtual screening experiment for inhibitors of the epidermal growth factor receptor ([EGFR](https://en.wikipedia.org/wiki/Epidermal_growth_factor_receptor)) via machine learning. First, computer-friendly molecular representations will be introduced, which allow the training of machine learning models. Next, a support vector machine will be trained to classify molecules as active or inactive. The trained model will be used to predict the activity of a small molecule set. Finally, successful participants can check their hits for potential activity against EGFR via online resources."
    ]
   },
   {
@@ -76,9 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Practical\n",
-    "\n",
-    "When running this notebook on Azure, make sure the Python 3.6 kernel is selected. "
+    "## Practical"
    ]
   },
   {
@@ -390,7 +388,7 @@
     }
    ],
    "source": [
-    "# pic the first SMILES stored in the dataframe and display the molecule with RDKit\n",
+    "# pick the first SMILES stored in the dataframe and display the molecule with RDKit\n",
     "print(df['smiles'][0])\n",
     "mol = Chem.MolFromSmiles(df['smiles'][0])\n",
     "mol"
@@ -405,7 +403,7 @@
     "`C` - aliphatic (sp3) carbon  \n",
     "`n` - aromatic (sp2) nitrogen  \n",
     "**Bonds** are only represented if needed:  \n",
-    "`-` - single bond (`CC` and `C-C` are the same, since single bonda are used by default)  \n",
+    "`-` - single bond (`CC` and `C-C` are the same, since single bonds are used by default)  \n",
     "`=` - double bond (`C=C-C=C` and `cccc` are the same)  \n",
     "`#` - triple bond  \n",
     "**Ring** opening and closures are represented with numbers:  \n",
@@ -1140,7 +1138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Visit [PubChem](https://pubchem.ncbi.nlm.nih.gov/), an only resource for chemical information, and query the database with a SMILES of a predicted active and predicted inactive. What can you find out about the molecules?***"
+    "***Visit [PubChem](https://pubchem.ncbi.nlm.nih.gov/), an online resource for chemical information, and query the database with a SMILES of a predicted active and predicted inactive. What can you find out about the molecules?***"
    ]
   }
  ],
@@ -1160,7 +1158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
