Updated URL for data import

--- a/week1_session3_matplotlib.ipynb
+++ b/week1_session3_matplotlib.ipynb
@@ -194,7 +194,7 @@
     "import numpy as np\n",
     "\n",
     "# Read in the RKI Covid-19 data set\n",
-    "covid19 = pd.read_csv('https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/20200705_COVID19_RKI.csv')\n",
+    "covid19 = pd.read_csv('https://opendata.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0.csv')\n",
     "\n",
     "# Transform string into datetime format\n",
     "covid19['Meldedatum'] = pd.to_datetime(covid19['Meldedatum'])"
