Some last updates

--- a/week1_session5_deep_learning.ipynb
+++ b/week1_session5_deep_learning.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "* **Instructor**: Moritz Seiler, AG Ritter, Charité - Universitätsmedizin Berlin (moritz.seiler@charite.de) <br>\n",
     "* **Target audience**:  Medical students from Charité<br>\n",
-    "* **Course date**:  July 2020"
+    "* **Course date**:  February 2021"
    ]
   },
   {
@@ -35,7 +35,9 @@
     "id": "rhSxBhNcUh8-"
    },
    "source": [
-    "**First, please make sure, that you're using the Python 3.6 kernel!**<br> You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab *Kernel* --> *Change Kernel* and select *Python 3.6*."
+    "> **Note:** If you are using this notebook outside of Google Colab,**please ensure that you're using a Python 3.6 or higher kernel**. You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab \"Kernel\" --> \"Change Kernel\" and select \"Python 3.6\" or higher. <br>\n",
+    "\n",
+    "**Executing the below cell should return a version higher than 3.6.0**"
    ]
   },
   {
@@ -3706,9 +3708,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
