--- a/week2_session1_cadd_exercise.ipynb
+++ b/week2_session1_cadd_exercise.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Tutor**: David Schaller  \n",
-    "**Institution**: Charité - Universitätsmedizin Berlin  \n",
-    "**Email**: david.schaller@charite.de  \n",
+    "- **Tutor:** David Schaller, AG Volkamer, Charité - Universitätsmedizin Berlin (david.schaller@charite.de)\n",
+    "- **Target audience**: Medical students from Charité\n",
+    "- **Course date**: February 2021\n",
     "\n",
     "This notebook is based on [TeachOpenCADD](https://github.com/volkamerlab/TeachOpenCADD/) and the scikit-learn [intro](https://github.com/volkamerlab/ai_in_medicine) from week 1."
    ]
@@ -1158,7 +1158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
