--- a/week1_session3_matplotlib.ipynb
+++ b/week1_session3_matplotlib.ipynb
@@ -35,7 +35,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**First, please make sure, that you're using the Python 3.6 or later kernel!**<br> You can check that in the top right corner of your browser window. If you're using a different Version go to the tab *Kernel* --> *Change Kernel* and select *Python 3.6*."
+    "> **Note:** If you are using this notebook outside of Google Colab,**please ensure that you're using a Python 3.6 or higher kernel**. You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab \"Kernel\" --> \"Change Kernel\" and select \"Python 3.6\". <br>\n",
+    "\n",
+    "**Executing the below cell should return a version higher than 3.6.0**"
    ]
   },
   {
@@ -47,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.8.5\r\n"
+      "Python 3.8.5\n"
      ]
     }
    ],
@@ -3541,7 +3543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
