--- a/week1_session4_intro_to_ml_and_scikit_learn.ipynb
+++ b/week1_session4_intro_to_ml_and_scikit_learn.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note:** First, **please ensure that you're using the Python 3.6 kernel**. You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab \"Kernel\" --> \"Change Kernel\" and select \"Python 3.6\". <br>\n",
+    "> **Note:** If you are using this notebook outside of Google Colab,**please ensure that you're using a Python 3.6 or higher kernel**. You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab \"Kernel\" --> \"Change Kernel\" and select \"Python 3.6\" or higher. <br>\n",
     "\n",
     "**Executing the below cell should return a version higher than 3.6.0**"
    ]
@@ -40,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.8.5\n"
+      "Python 3.8.3\n"
      ]
     }
    ],
@@ -1498,6 +1498,7 @@
     "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/non-linear_sep.png)*)\n",
     "\n",
     "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/sphx_glr_plot_iris_svc_001.png\" width=\"700\" />\n",
+    "\n",
     "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/sphx_glr_plot_iris_svc_001.png)*)\n",
     "\n",
     "This is good for separating non-linearly separable data."
@@ -1739,6 +1740,7 @@
     "ax2.set_title('Confusion Matrix - LR', fontsize=20)\n",
     "\n",
     "# create directory to contain results\n",
+    "!mkdir -p results/week1_session4_intro_to_ml_and_scikit-learn\n",
     "fig.savefig(\n",
     "    'results/week1_session4_intro_to_ml_and_scikit-learn/confusion_matrices'\n",
     ");"
@@ -2299,7 +2301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
