Small updates on w1s1

--- a/week1_session1_grundkonzepte.ipynb
+++ b/week1_session1_grundkonzepte.ipynb
@@ -101,7 +101,7 @@
     "Python is a widely used general-purpose high-level programming language.\n",
     "The term \"high-level\" means that the language has abstracted away most of the technical details and manages them for you (e.g. memory allocation).\n",
     "\n",
-    "In this course we will use Python 3.7.\n",
+    "In this course we will use Python 3.6 (default in Colab as of Feb 2021).\n",
     "\n",
     "#### What is this interface?\n",
     "\n",
@@ -335,6 +335,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TASK contents here\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is another list\n",
     "neighborhoods = [\"mitte\", \"kreuzberg\", \"kreuzberg\"]\n",
     "print(neighborhoods)"
    ]
@@ -477,13 +489,13 @@
     "![def_dict.png](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/def_dict.png)\n",
     "\n",
     "\n",
-    "Or, neighborhoods and the [number of cases as of 30.06.2020](https://www.berlin.de/lageso/gesundheit/infektionsepidemiologie-infektionsschutz/corona/tabelle-bezirke/):\n",
+    "Or, neighborhoods and the [number of cases as of 07.02.2021](https://www.berlin.de/lageso/gesundheit/infektionsepidemiologie-infektionsschutz/corona/tabelle-bezirke/):\n",
     "\n",
     "```python\n",
-    "cases_by_neighborhood = {\"mitte\": 1188, \"kreuzberg\": 6666, \"neukölln\": 1011, \"spandau\": 445}\n",
+    "cases_by_neighborhood = {\"mitte\": 15672, \"kreuzberg\": 100569, \"neukölln\": 14630, \"spandau\": 9243}\n",
     "```\n",
     "\n",
-    "The keys in this example are `\"mitte\"`, `\"kreuzberg\"`, `\"neukölln\"` and `\"spandau\"`. The values are `1188`, `666`, `1011`, `445` respectively.\n",
+    "The keys in this example are `\"mitte\"`, `\"kreuzberg\"`, `\"neukölln\"` and `\"spandau\"`. The values are `15672`, `100569`, `14630`, `9243` respectively.\n",
     "\n",
     "Values can be accessed by refering to the specific **key** by using `[]` brackets (same as lists!):\n",
     "\n",
@@ -502,7 +514,7 @@
     "In the same way already existent  **key**-**value** pairs can be overwritten.\n",
     "\n",
     "> **TASK:**\n",
-    "> *We made a typo in the dict definition above. Kreuzberg (or more specifically, Friedrichshain-Kreuzberg) has 666 cases, not 6666! Correct the **key**-**value** pair and set its value to `666` without redefining the entire `cases_by_neighborhood` dictionary. \n",
+    "> *We made a typo in the dict definition above. Kreuzberg (or more specifically, Friedrichshain-Kreuzberg) has 10569 cases, not 100569! Correct the **key**-**value** pair and set its value to `10569` without redefining the entire `cases_by_neighborhood` dictionary. \n",
     "> Check your correction by printing the new dictionary value.*"
    ]
   },
@@ -512,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cases_by_neighborhood = {\"mitte\": 1188, \"kreuzberg\": 6666, \"neukölln\": 1011, \"spandau\": 445}\n",
+    "cases_by_neighborhood = {\"mitte\": 15672, \"kreuzberg\": 100569, \"neukölln\": 14630, \"spandau\": 9243}\n",
     "# Your lines of code here\n",
     "\n",
     "print(cases_by_neighborhood)"
@@ -526,7 +538,7 @@
     "\n",
     "#### Operations\n",
     "\n",
-    "Every type defines some **operations** to do basic tasks.\n",
+    "Every object type (`int`, `str`, etc) defines some **operations** to do basic tasks.\n",
     "\n",
     "For example, a variable of type `int` defines, among others, the following operations:\n",
     "- Addition `+`\n",
@@ -535,7 +547,7 @@
     "- Division `/`\n",
     "\n",
     "\n",
-    "A division is allowed but **changes** the type of the variable (from Integer to `float`). \n",
+    "A division is allowed but **changes** the type of the _returned_ variable (from `int` to `float`). \n",
     "\n",
     "\n",
     "```python\n",
@@ -555,6 +567,17 @@
     "> *TASK:* <br>\n",
     "*Now try to use the addition-operation for the variable named `my_string` already defined in the cell below. <br>\n",
     "Save the addition in a variable called `res1` and print the result.*\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_string = \"grundkonzepte\"\n",
+    "# ...\n",
+    "# res1 = ..."
    ]
   },
   {
@@ -633,6 +656,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***\n",
+    "⌚ Suggested break!\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4.3 Flow control\n",
     "\n",
     "As any programming language python gives flow control possibilities: `if, else, for, while`.\n",
@@ -644,12 +676,12 @@
     "We could have a piece of code checking the number of cases in our neighborhood every day so we can get an alert if the number of cases exceeds a certain threshold. For example:\n",
     "\n",
     "```python\n",
-    "if cases_by_neighborhood[\"kreuzberg\"] > 1000:\n",
-    "    print(\"The number of Friedrichshain-Kreuzberg is above a thousand!!!!!\")\n",
+    "if cases_by_neighborhood[\"kreuzberg\"] > 10000:\n",
+    "    print(\"The number of Friedrichshain-Kreuzberg is above ten thousand!!!!!\")\n",
     "    # here, more lines could follow\n",
     "else:\n",
     "    # If the `if` clause is not true, then this block gets executed instead.\")\n",
-    "    print(\"Kreuzberg has not reached a 1000 cases yet.\")\n",
+    "    print(\"Kreuzberg has not reached a 10000 cases yet.\")\n",
     "\n",
     "# These lines are not indented anymore.\n",
     "# They will be executed regardless of the value of variable 'status'. \n",
@@ -660,24 +692,24 @@
     "* Keyword `if` indicates the start of an ` if`-statement. \n",
     "* A **conditional expression** (here `cases_by_neighborhood[\"kreuzberg\"] > 1000`) follows, which will return (explicitly or implicitly) a `bool`-type. Thus, either `True` or `False`. \n",
     "* A `:` closes the ` if`-statement. \n",
-    "* An **indented** block follows. All contiguous lines sharing the same level of indentation (or larger) belong to the same block and are executed only if the condition is met.\n",
+    "* An **indented** block follows. All contiguous lines sharing the same level of indentation (or deeper) belong to the same block and are executed only if the condition is met.\n",
     "* After the `if` block, an `else` block is defined. This is optional!\n",
     "\n",
     "Now further think of a scenario, where we have to decide whether to run a certain code based on 3 or more different conditions. Alternative, exclusive conditions can be done with `elif`.\n",
     "\n",
     "```python\n",
-    "if cases_by_neighborhood[\"kreuzberg\"] > 1500:\n",
-    "    print(\"The number of Friedrichshain-Kreuzberg is above a 1500!!!!!\")\n",
+    "if cases_by_neighborhood[\"kreuzberg\"] > 15000:\n",
+    "    print(\"The number of Friedrichshain-Kreuzberg is above a 15000!!!!!\")\n",
     "    # here, more lines could follow\n",
-    "elif cases_by_neighborhood[\"kreuzberg\"] > 750:\n",
-    "    print(\"The number of Friedrichshain-Kreuzberg is above a 750!!!\")\n",
+    "elif cases_by_neighborhood[\"kreuzberg\"] > 7500:\n",
+    "    print(\"The number of Friedrichshain-Kreuzberg is above a 7500!!!\")\n",
     "    # here, more lines could follow\n",
-    "elif cases_by_neighborhood[\"kreuzberg\"] > 375:\n",
-    "    print(\"The number of Friedrichshain-Kreuzberg is above a 375!!!\")\n",
+    "elif cases_by_neighborhood[\"kreuzberg\"] > 3750:\n",
+    "    print(\"The number of Friedrichshain-Kreuzberg is above a 3750!!!\")\n",
     "    # here, more lines could follow\n",
     "else:\n",
     "    # If the `if` clause is not true, then this block gets executed instead.\")\n",
-    "    print(\"Kreuzberg has not reached a 1000 cases yet.\")\n",
+    "    print(\"Kreuzberg has not reached a 3750 cases yet.\")\n",
     "```\n",
     "***\n",
     "\n",
@@ -704,17 +736,17 @@
     "\n",
     "When we want to repeat the same action for different parameters, we wouldn't like to write the same code N times, right? That's what computers are for, anyway.\n",
     "\n",
-    "Let's check which neighborhoods are above a thousand cases. You might be tempted to do this:\n",
+    "Let's check which neighborhoods are above ten thousand cases. You might be tempted to do this:\n",
     "\n",
     "```python\n",
-    "if cases_by_neighborhood[\"kreuzberg\"] > 1000:\n",
-    "    print(\"The number of cases in Friedrichshain-Kreuzberg is above a thousand!!!!!\")\n",
-    "if cases_by_neighborhood[\"mitte\"] > 1000:\n",
-    "    print(\"The number of cases in Mitte is above a thousand!!!!!\")\n",
-    "if cases_by_neighborhood[\"neukölln\"] > 1000:\n",
-    "    print(\"The number of cases in Neukölln is above a thousand!!!!!\")\n",
-    "if cases_by_neighborhood[\"spandau\"] > 1000:\n",
-    "    print(\"The number of cases in Spandau is above a thousand!!!!!\")\n",
+    "if cases_by_neighborhood[\"kreuzberg\"] > 10000:\n",
+    "    print(\"The number of cases in Friedrichshain-Kreuzberg is above ten thousand!!!!!\")\n",
+    "if cases_by_neighborhood[\"mitte\"] > 10000:\n",
+    "    print(\"The number of cases in Mitte is above ten thousand!!!!!\")\n",
+    "if cases_by_neighborhood[\"neukölln\"] > 10000:\n",
+    "    print(\"The number of cases in Neukölln is above ten thousand!!!!!\")\n",
+    "if cases_by_neighborhood[\"spandau\"] > 10000:\n",
+    "    print(\"The number of cases in Spandau is above ten thousand!!!!!\")\n",
     "\n",
     "```"
    ]
