session4: added a missing image

--- a/week1_session4_intro_to_ml_and_scikit_learn.ipynb
+++ b/week1_session4_intro_to_ml_and_scikit_learn.ipynb
@@ -917,7 +917,17 @@
    "source": [
     "#### 5.6.5 Receiver Operating Characteristic (ROC) Curve\n",
     "\n",
-    "The ROC curve is a graph that shows the performance of a classification model at all thresholds. It is a common choice for assessing a binary classifier. The ROC curve is a plot of the True Positive Rate (recall) vs the False Positive Rate. The dotted red line indicates the performance of a random classifier that has a 50% chance of outputting either label. The area under the curve (AUC) of the ROC curve is a measure that tells us how well our classifier can distinguish between the classes."
+    "- The ROC curve is a graphical method to summarise all possible confusion matrix of a model. \n",
+    "- It shows the performance of a classification model at all thresholds. \n",
+    "- It is a common choice for assessing a binary classifier. \n",
+    "- The ROC curve is a plot of the True Positive Rate (recall) vs the False Positive Rate. \n",
+    "- The diagonal line (C) represents the performance of a random classifier that has a 50% chance of outputting either label. \n",
+    "- The area under the curve (AUC) of the ROC curve is a measure that tells us how well our classifier can distinguish between the classes.\n",
+    "\n",
+    "\n",
+    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/rocs.png\" width=\"600\" /> \n",
+    "\n",
+    "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/rocs.png)*)"
    ]
   },
   {
@@ -1201,8 +1211,6 @@
    "outputs": [],
    "source": [
     "# Hint: Use the score method from each model class.\n",
-    "\n",
-    "\n",
     "# YOUR CODE GOES HERE"
    ]
   },
@@ -1262,8 +1270,6 @@
    "outputs": [],
    "source": [
     "# Hint: Use the roc_auc_score and roc_curve functions\n",
-    "\n",
-    "\n",
     "# YOUR CODE GOES HERE"
    ]
   },
