--- a/week2_session1_cadd_exercise.ipynb
+++ b/week2_session1_cadd_exercise.ipynb
@@ -184,10 +184,9 @@
    "outputs": [],
    "source": [
     "# Read activity data for EGFR into a pandas dataframe named df\n",
+    "egfr_chembl25_link = 'https://github.com/volkamerlab/ai_in_medicine/raw/master/data/egfr_chembl25.csv'\n",
     "#################### <-- insert code below\n",
-    "df = pd.read_csv('https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/egfr_chembl25.csv')\n",
-    "display(df.head())\n",
-    "df.info()\n",
+    "\n",
     "#################### <-- insert code above"
    ]
   },
@@ -257,8 +256,7 @@
    "source": [
     "# Write the smiles for acetylsalicylic acid\n",
     "####################\n",
-    "aspirin = Chem.MolFromSmiles('C1=C-C(C(O)=O)=C(OC(=O)C)-C=C1')\n",
-    "aspirin\n",
+    "\n",
     "####################"
    ]
   },
@@ -379,9 +377,7 @@
    "source": [
     "# Mark every molecule as active with an IC50 < 500\n",
     "####################\n",
-    "df['active'] = np.zeros(len(df))\n",
-    "df.loc[df[df['IC50[nM]'] < 500].index, 'active'] = 1.0\n",
-    "display(df.head())\n",
+    "\n",
     "####################"
    ]
   },
@@ -421,7 +417,7 @@
     "x, y = df['maccs'].to_list(), df['active'].to_list()\n",
     "# Split the features and labels into training and test sets\n",
     "####################\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)\n",
+    "\n",
     "####################"
    ]
   },
@@ -442,8 +438,7 @@
    "source": [
     "# train model\n",
     "####################\n",
-    "svc = SVC(probability=True)\n",
-    "svc.fit(x_train, y_train)\n",
+    "\n",
     "####################"
    ]
   },
@@ -465,7 +460,7 @@
    "source": [
     "# predict the activity of the test set\n",
     "####################\n",
-    "y_test_pred = svc.predict(x_test)\n",
+    "\n",
     "####################"
    ]
   },
@@ -477,8 +472,7 @@
    "source": [
     "# calculate AUC\n",
     "####################\n",
-    "svc_roc_auc = roc_auc_score(y_test, y_test_pred)\n",
-    "print('AUC:', svc_roc_auc)\n",
+    "\n",
     "####################"
    ]
   },
@@ -490,16 +484,7 @@
    "source": [
     "# plot the ROC curve\n",
     "####################\n",
-    "fpr, tpr, thresholds = roc_curve(y_test, svc.predict_proba(x_test)[:,1])\n",
-    "plt.plot(fpr, tpr, label=f'SVC - AUC={round(svc_roc_auc,2)}')\n",
-    "plt.xlim([-0.05, 1.05])\n",
-    "plt.ylim([-0.05, 1.05])\n",
-    "plt.plot([0, 1], [0, 1], linestyle='--', label='Random', lw=2, color=\"black\")  # Random curve\n",
-    "plt.xlabel('False positive rate', size=12)\n",
-    "plt.ylabel('True positive rate', size=12)\n",
-    "plt.tick_params(labelsize=12)\n",
-    "plt.legend(fontsize=12)\n",
-    "plt.show()\n",
+    "\n",
     "####################"
    ]
   },
@@ -519,10 +504,9 @@
    "outputs": [],
    "source": [
     "# load data and assign maccs keys \n",
+    "egfr_candidates_link = 'https://github.com/volkamerlab/ai_in_medicine/raw/master/data/egfr_candidates.csv'\n",
     "####################\n",
-    "df2 = pd.read_csv('https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/egfr_candidates.csv')\n",
-    "add_mols_and_maccs(df2)\n",
-    "display(df2)\n",
+    "\n",
     "####################"
    ]
   },
@@ -534,8 +518,7 @@
    "source": [
     "# predict the activity\n",
     "####################\n",
-    "y_pred_svc = svc.predict(df2['maccs'].tolist())\n",
-    "display(y_pred_svc)\n",
+    "\n",
     "####################"
    ]
   },
@@ -563,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
