Update deprecated links

--- a/week1_session2_numpy_pandas.ipynb
+++ b/week1_session2_numpy_pandas.ipynb
@@ -67,7 +67,7 @@
     "- RKI COVID-19 dataset for Berlin\n",
     "  - https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0/data?orderBy=Bundesland&where=Bundesland%20%3D%20%27Berlin%27\n",
     "- LaGeSo dataset for Berlin's districts\n",
-    "  - https://www.berlin.de/lageso/gesundheit/infektionsepidemiologie-infektionsschutz/corona/tabelle-bezirke/\n",
+    "  - https://www.berlin.de/corona/lagebericht/ > Bezirke > Übersicht\n",
     "- Dataset on vaccination progress in Germany\n",
     "  - https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Daten/Impfquoten-Tab.html"
    ]
@@ -1165,7 +1165,7 @@
    "source": [
     "Get number of current COVID-19 cases by Berlin's districts and compare your findings to the official COVID-19 table for Berlin: \n",
     "\n",
-    "https://www.berlin.de/lageso/gesundheit/infektionsepidemiologie-infektionsschutz/corona/tabelle-bezirke/"
+    "https://www.berlin.de/corona/lagebericht/ > Bezirke > Übersicht"
    ]
   },
   {
