Update deprecated image path

--- a/week1_session2_numpy_pandas.ipynb
+++ b/week1_session2_numpy_pandas.ipynb
@@ -216,7 +216,7 @@
     "\n",
     "The `DataFrame` is used more than the `Series`, so let’s take a look at its components.\n",
     "\n",
-    "![DataFrame anatomy](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/dataframe_anatomy.png)\n",
+    "![DataFrame anatomy](https://raw.githubusercontent.com/volkamerlab/ai_in_medicine/master/images/dataframe_anatomy.png)\n",
     "\n",
     "Figure source: https://medium.com/dunder-data/selecting-subsets-of-data-in-pandas-6fcd0170be9c"
    ]
