Update notebook text (WIP)

--- a/week1_session2_numpy_pandas.ipynb
+++ b/week1_session2_numpy_pandas.ipynb
@@ -177,7 +177,8 @@
     "* Role: Data manipulation and analysis\n",
     "* Website: https://pandas.pydata.org/\n",
     "* Description (taken from [here](https://pandas.pydata.org/)):\n",
-    "> Pandas is an open source, BSD-licensed library providing high-performance, easy-to-use data structures and data analysis tools for the Python programming language. \n",
+    "> pandas is a fast, powerful, flexible and easy to use open source data analysis and manipulation tool,\n",
+    "built on top of the Python programming language.\n",
     "* Documentation: https://pandas.pydata.org/pandas-docs/stable/"
    ]
   },
@@ -1508,7 +1509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A word of encouragement :)__ \n",
+    "__Words of encouragement :)__ \n",
     "\n",
     "Before you take a look at the solutions, try to solve the exercises yourself. \n",
     "\n",
