Update COVID-19 cases code

--- a/week1_session2_numpy_pandas.ipynb
+++ b/week1_session2_numpy_pandas.ipynb
@@ -64,12 +64,13 @@
     "  - https://medium.com/dunder-data/how-to-learn-pandas-108905ab4955\n",
     "  - https://www.shanelynn.ie/select-pandas-dataframe-rows-and-columns-using-iloc-loc-and-ix/#iloc-selection\n",
     "  - https://medium.com/dunder-data/selecting-subsets-of-data-in-pandas-6fcd0170be9c\n",
-    "- RKI COVID-19 dataset for Berlin\n",
-    "  - https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0/data?orderBy=Bundesland&where=Bundesland%20%3D%20%27Berlin%27\n",
-    "- LaGeSo dataset for Berlin's districts\n",
-    "  - https://www.berlin.de/corona/lagebericht/ > Bezirke > Übersicht\n",
-    "- Dataset on vaccination progress in Germany\n",
-    "  - https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Daten/Impfquoten-Tab.html"
+    "- Datasets\n",
+    "  - COVID-19 cases:  [raw RKI data](https://opendata.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0.csv)\n",
+    "  - Vaccination progress in Germany: [raw RKI data](https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Daten/Impfquoten-Tab.html) and [processed data](https://github.com/ard-data/2020-rki-impf-archive)\n",
+    "- Data visualization\n",
+    "  - [RKI COVID-19 dashboard](https://corona.rki.de/)\n",
+    "  - [COVID-19 cases for Berlin's districts > Bezirke > Übersicht](https://www.berlin.de/corona/lagebericht/)\n",
+    "  - [Vaccination dashboard](https://impfdashboard.de/)"
    ]
   },
   {
@@ -323,6 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "# `read_csv` takes paths in your computer, but also Internet URLs!\n",
     "# Reading the remote csv file takes a couple of seconds\n",
     "data = pd.read_csv(\"https://opendata.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0.csv\", delimiter=',')"
@@ -455,22 +457,6 @@
    "outputs": [],
    "source": [
     "pd.DataFrame(list_of_lists, columns=['name', 'age', 'gender'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Just to stress this point in reverse: It is also possible to transform our `pandas` `DataFrame` back to a 2D `numpy` matrix (a list of lists)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.to_numpy()"
    ]
   },
   {
@@ -826,22 +812,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another example: Check the date of data update (`'Datenstand'`)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['Datenstand'].unique()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### _Your turn_: Exercises\n",
     "\n",
     "Let's meet in small groups and work on a few exercises. Afterwards, we will discuss them shortly together."
@@ -930,13 +900,7 @@
     "How can we use this boolean Series know to subset `data` for data points concerning Berlin (i.e. filter `data` for rows concerning Berlin)? We use the following syntax:\n",
     "\n",
     "```python\n",
-    "# Use one condition\n",
     "data[condition]\n",
-    "\n",
-    "# Use multipe conditions\n",
-    "data[condition1 & condition2]  # Fullfill condition 1 AND 2\n",
-    "data[condition1 & not condition2]  # Fullfill condition 1 AND not 2\n",
-    "data[condition1 | condition2]  # Fullfill condition 1 OR 2\n",
     "```"
    ]
   },
@@ -967,7 +931,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Exercise 9__: Select only data points for Berlin Mitte."
+    "__Exercise 9__: Select only data points for Berlin Mitte (one condition)."
    ]
   },
   {
@@ -981,7 +945,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Exercise 10__: Select only data points for Berlin and patients between 35 and 59 years old."
+    "__Exercise 10__: Select only data points for Berlin and patients between 35 and 59 years old (two conditions).\n",
+    "\n",
+    "```python\n",
+    "# Use one condition\n",
+    "data[condition]\n",
+    "\n",
+    "# Use multipe conditions\n",
+    "data[condition1 & condition2]  # Fullfill condition 1 AND 2\n",
+    "data[condition1 & not condition2]  # Fullfill condition 1 AND not 2\n",
+    "data[condition1 | condition2]  # Fullfill condition 1 OR 2\n",
+    "```"
    ]
   },
   {
@@ -1031,7 +1005,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 1: Get group size with `size()`"
+    "#### Example: Get group sum with `sum()`"
    ]
   },
   {
@@ -1063,7 +1037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Applying and combining**: Apply function to each group, e.g. get the number of entries in each group using `size()`."
+    "Look at one of the groups (= subset of the full DataFrame)."
    ]
   },
   {
@@ -1072,14 +1046,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_berlin.groupby('Altersgruppe').size()"
+    "data_berlin.groupby('Altersgruppe').get_group(\"A00-A04\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result is combined into a data structure, i.e. `Series`."
+    "**Applying and combining**: Apply function to each group, e.g. get the sum of numerical values in each group using `sum()`."
    ]
   },
   {
@@ -1088,7 +1062,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(data_berlin.groupby('Altersgruppe').size())"
+    "data_berlin.groupby('Altersgruppe').sum()"
    ]
   },
   {
@@ -1104,78 +1078,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_berlin.groupby('Altersgruppe').size().plot(\n",
+    "data_berlin.groupby('Altersgruppe').sum()['AnzahlFall'].plot(\n",
     "    kind='bar', \n",
-    "    title=f'Number of entries in RKI COVID dataset from {data[\"Datenstand\"].unique()[0]}'\n",
-    ")"
+    "    title=f'Number of all COVID19 cases in Berlin since the beginning of the pandamic ({data[\"Datenstand\"].unique()[0]})'\n",
+    ");"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 2: Get group sum with `sum()`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get the sum of current cases, deaths, and recoveries. \n",
-    "\n",
-    "The columns needed have the following names:\n",
-    "\n",
-    "- `AnzahlFall`: Number of cases in group\n",
-    "- `AnzahlTodesfall`: Number of deaths in group\n",
-    "- `AnzahlGenesen`: Number of recoveries in group"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'Total number of current COVID-19 cases in Berlin:')\n",
-    "data_berlin['AnzahlFall'].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'Total number of COVID-19 associated cases in Berlin:')\n",
-    "data_berlin['AnzahlTodesfall'].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'Total number of COVID-19 recoveries in Berlin:')\n",
-    "data_berlin['AnzahlGenesen'].sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get number of current COVID-19 cases by Berlin's districts and compare your findings to the official COVID-19 table for Berlin: \n",
-    "\n",
-    "https://www.berlin.de/corona/lagebericht/ > Bezirke > Übersicht"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_berlin.groupby('Landkreis')['AnzahlFall'].sum()"
+    "Compare this plot with the [RKI Dashboard](https://corona.rki.de/)."
    ]
   },
   {
@@ -1205,7 +1118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Exercise 12__: Get the number of COVID-19 recoveries in Berlin grouped by Berlin's districts."
+    "__Exercise 12__: Get number of total COVID-19 cases by Berlin's districts and compare your findings to the [official COVID-19 table for Berlin > Bezirke > Übersicht](https://www.berlin.de/corona/lagebericht/)."
    ]
   },
   {
@@ -1219,7 +1132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Exercise 13__: Plot the number of current COVID-19 cases in Berlin grouped by Berlin's districts (barplot)."
+    "__Exercise 13__: Plot the number of total COVID-19 cases in Berlin grouped by Berlin's districts (barplot)."
    ]
   },
   {
