Update vaccination code (new dataset from URL)

--- a/week1_session2_numpy_pandas.ipynb
+++ b/week1_session2_numpy_pandas.ipynb
@@ -1163,56 +1163,36 @@
     "\n",
     "As promised at the beginning, you will get your own dataset now :)\n",
     "\n",
-    "Last year during the course, we could only work with COVID-19 cases data but luckily, this year, we have something positive to look at as well - the vaccination progress in Germany! You can find that data online again at the [RKI website](https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Daten/Impfquoten-Tab.html) (under the \"Daten\" section)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Let's load the dataset (in a small preprocessing step, the website's excel file was converted into a csv file):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vaccination_monitoring = pd.read_csv(\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/20210203_Impfquotenmonitoring_RKI.csv\")\n",
+    "Last year during the course, we could only work with COVID-19 cases data but luckily, this year, we have something positive to look at as well - the vaccination progress in Germany! You can find that data online again at the [RKI website](https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Daten/Impfquoten-Tab.html) (under the \"Daten\" section). \n",
     "\n",
-    "# Cast \"Datum\" column to date type\n",
-    "vaccination_monitoring[\"Datum\"] = pd.to_datetime(vaccination_monitoring[\"Datum\"])\n",
-    "vaccination_monitoring.head()"
+    "The provided Excel file is a bit difficult to handle, thus many GitHub repos have been set up to process the dataset into formats that are easier to work with, e.g. https://github.com/ard-data/2020-rki-impf-archive."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Note__: If we worked locally (data files locally on our computer), we could also use `pandas` to the excel file directly."
+    "1. Let's load the cumulative vaccination progress for Germany:"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "!pip install openpyxl"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "vaccination_monitoring = pd.read_excel(\"data/20210203_Impfquotenmonitoring_RKI.xlsx\", sheet_name=\"Impfungen_proTag\")\n",
-    "vaccination_monitoring"
+    "vaccination_cumulative = pd.read_csv(\n",
+    "    \"https://raw.githubusercontent.com/ard-data/2020-rki-impf-archive/master/data/9_csv_v3/region_DE.csv\"\n",
+    ")\n",
+    "vaccination_cumulative[\"date\"] = pd.to_datetime(vaccination_cumulative[\"date\"])\n",
+    "vaccination_cumulative.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Select only rows that you need for the vaccination time series."
+    "2. Set the date as the `DataFrame` index. Use `pandas.DataFrame.set_index(column_name)` for that."
    ]
   },
   {
@@ -1226,7 +1206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Set the date as the `DataFrame` index. Use `pandas.DataFrame.set_index(column_name)` for that."
+    "3. Select only the columns containing the cumulative number of people who are fully vaccinated or vaccinated once/twice."
    ]
   },
   {
@@ -1240,21 +1220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Plot the time series."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "5. Use `pd.DataFrame.cumsum()` to generate a DataFrame with cummulutive data and plot again."
+    "4. Plot the cumulative time series."
    ]
   },
   {
@@ -1472,7 +1438,7 @@
     "pd.DataFrame(\n",
     "    [\n",
     "        [\"France\", \"Gewürztraminer\", True], \n",
-    "        [\"Australia\", \"divers nature\", True], \n",
+    "        [\"Australia\", \"beautiful nature\", True], \n",
     "        [\"Israel\", \"hummus\", True], \n",
     "        [\"Iceland\", \"language\", False]\n",
     "    ], \n",
@@ -1604,7 +1570,7 @@
     "<summary> > Solution 12</summary>\n",
     "    \n",
     "```python\n",
-    "data.groupby('Landkreis')['AnzahlGenesen'].sum()\n",
+    "data_berlin.groupby('Landkreis')['AnzahlFall'].sum()\n",
     "```\n",
     "    \n",
     "</details>"
@@ -1618,9 +1584,8 @@
     "<summary> > Solution 13</summary>\n",
     "    \n",
     "```python\n",
-    "data.groupby('Altersgruppe')['AnzahlFall'].sum().plot(\n",
-    "    kind='bar', \n",
-    "    title=f'Number of COVID-19 cases in Berlin'\n",
+    "data_berlin.groupby('Landkreis')['AnzahlFall'].sum().plot(\n",
+    "    kind='bar', title=f'Number of COVID-19 cases in Berlin'\n",
     ")\n",
     "```\n",
     "    \n",
@@ -1635,11 +1600,9 @@
     "<summary> > Solution to final exercise</summary>\n",
     "    \n",
     "```python\n",
-    "vaccination_monitoring_selected = vaccination_monitoring[:-1]\n",
-    "vaccination_monitoring_selected = vaccination_monitoring_selected.set_index(\"Datum\")\n",
-    "vaccination_monitoring_selected.plot();\n",
-    "\n",
-    "vaccination_monitoring_selected.cumsum().plot();\n",
+    "vaccination_cumulative = vaccination_cumulative.set_index(\"date\")\n",
+    "vaccination_cumulative = vaccination_cumulative[[\"personen_erst_kumulativ\", \"personen_voll_kumulativ\", \"personen_zweit_kumulativ\"]]\n",
+    "vaccination_cumulative.plot()\n",
     "```\n",
     "    \n",
     "</details>"
@@ -1662,7 +1625,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.5"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
